Fix footer social icons gap

--- a/assets/scss/components/footer/_footer.scss
+++ b/assets/scss/components/footer/_footer.scss
@@ -117,10 +117,7 @@
 		padding: initial;
 		list-style: none;
 		display: flex;
-
-		@supports ( gap: 4px) {
-			gap: 4px;
-		}
+		gap: 4px;
 	}
 	
 	.social-links__item {
